--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -242,7 +242,7 @@ header nav[aria-expanded='true'] .nav-tools li {
   header nav .nav-sections > ul > li {
     padding: 0 16px;
     position: relative;
-    font-size: 12px;
+    font-size: 14px;
     margin: 0;
     cursor: pointer;
     padding-top: 0;
